--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unnote",
-  "version": "1.0.4",
+  "version": "2.0.0",
   "type": "module",
   "main": "index.js",
   "bin": {
@@ -9,7 +9,10 @@
   "author": "laiso",
   "license": "MIT",
   "dependencies": {
-    "got": "^12.5.3",
+    "got": "14.0.0",
     "yargs": "^17.6.2"
+  },
+  "scripts": {
+    "e2e-test": "node index.js export laiso"
   }
 }
